--- a/public/proxy.html
+++ b/public/proxy.html
@@ -1,2 +1,2 @@
 <!DOCTYPE HTML>
-<script src="http://jpillora.com/xdomain/dist/0.5/xdomain.min.js" master="http://staging.classvantage.com"></script>
+<script src="http://jpillora.com/xdomain/dist/0.5/xdomain.min.js" data-master="http://*.classvantage.com"></script>
